--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -31,6 +31,7 @@
   background-color: $primary
 
 .page-sidebar .sidebar-menu .menu-items > li > a > .title {
+   background-color: $primary;
    width: 100%;
 }
 
