--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -193,3 +193,14 @@ input[type="file"].form-control {
   display: table;
    z-index: 1;
 }
+
+@keyframes fadein {
+  0%{opacity: 0;}
+  100%{opacity: 1;}
+}
+
+@keyframes fadeout {
+  100%{opacity: 1;}
+  0%{opacity: 0;}
+}
+
